--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     header -->
 
     <header class="header">
-      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип">
+      <div class="logo logo_place_header"></div>
 
       <h1 class="header__title">
         Научиться учиться
@@ -180,7 +180,7 @@
       <div class="footer__columns">
 
         <div class="footer__column footer__column_content_copyright">
-          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип">
+          <div class="logo logo_place_footer"></div>
 
           <p class="footer__author">&copy; 2021. Данил Мелентьев</p>
         </div>
