починил ссылки на картинки

--- a/index.html
+++ b/index.html
@@ -200,15 +200,15 @@
 
           <div class="footer__column-links">
             <a class="footer__column-link" href="#">
-              <img class="footer__social-icon" src="images/facebook_color_white.svg" alt="Иконка Facebook">
+              <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Иконка Facebook">
               Facebook
             </a>
             <a class="footer__column-link" href="#">
-              <img class="footer__social-icon" src="images/vk_color_white.svg" alt="Иконка ВКонтакте">
+              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Иконка ВКонтакте">
               ВКонтакте
             </a>
             <a class="footer__column-link" href="#">
-              <img class="footer__social-icon" src="images/instagram_color_white.svg" alt="Иконка Instagram">
+              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Иконка Instagram">
               Instagram
             </a>
           </div>
