--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка">
 
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
@@ -46,6 +46,80 @@
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
+      </section>
+
+      <!-- ==========
+      techniques -->
+
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <ul class="cards">
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards/cards-attention.png" alt="Два вида внимание"></img>
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards/cards-recall.png" alt="Вспоминайте изученное"></img>
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards/cards-interliving.png" alt="Интерливинг"></img>
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards/cards-question.png" alt="Придумывайте вопросы"></img>
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards/cards-competence.png" alt="Иллюзия компетентности"></img>
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- ==========
+      video -->
+
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <!-- ==========
+      oakley -->
+
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- ==========
+      feynman -->
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="" class="feynman__link">Подробнее &rarr;</a>
+        <img class="feynman__img" src="./images/feynman.png" alt="Фотография Фейнмана">
       </section>
 
       <!-- ==========
@@ -101,13 +175,21 @@
       </section>
 
       <!-- ==========
-      feynman -->
+      khan -->
 
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="" class="feynman__link">Подробнее &rarr;</a>
-        <img class="feynman__img" src="./images/feynman.png" alt="Фотография Фейнмана">
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Книга Весь мир — школа">
+            <a class="khan__buy-link" href="">Купить книгу &rarr;</a>
+          </div>
+        </div>
       </section>
 
       <!-- ==========
@@ -169,7 +251,29 @@
           </li>
         </ul>
 
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
+      </section>
+
+      <!-- ==========
+      resources -->
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+
+        <ul class="resources__logo-zone">
+          <li class="resources__logo">
+            <a href="#">
+              <img src="./images/logo/resources-arzamas.svg" alt="Arzamas"></img>
+            </a>
+          </li>
+
+          <li class="resources__logo"><a href="#"><img src="./images/logo/resources-n1.svg" alt="N + 1"></img></a></li>
+
+          <li class="resources__logo"><a href="#"><img src="./images/logo/resources-strelka.svg" alt="Strelka"></img></a></li>
+
+          <li class="resources__logo"><a href="#"><img src="./images/logo/resources-polka.svg" alt="Полка"></img></a></li>
+        </ul>
       </section>
     </main>
 
@@ -204,17 +308,17 @@
 
           <ul class="footer__column-links">
             <li class="footer__column-link"><a class="footer__link" href="#">
-              <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Иконка Facebook">
+              <img class="footer__social-icon" src="./images/socials/facebook_color_white.svg" alt="Иконка Facebook">
               Facebook
             </a></li>
 
             <li class="footer__column-link"><a class="footer__link" href="#">
-              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Иконка ВКонтакте">
+              <img class="footer__social-icon" src="./images/socials/vk_color_white.svg" alt="Иконка ВКонтакте">
               ВКонтакте
             </a></li>
 
             <li class="footer__column-link"><a class="footer__link" href="#">
-              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Иконка Instagram">
+              <img class="footer__social-icon" src="./images/socials/instagram_color_white.svg" alt="Иконка Instagram">
               Instagram
             </a></li>
           </ul>
