--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     header -->
 
     <header class="header">
-      <a class="logo logo_place_header" href="#" target="blank"></a>
+      <a class="logo logo_place_header" href="#" target="_blank"></a>
 
       <h1 class="header__title">
         Научиться учиться
       </h1>
 
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#" target="blank">Узнать &rarr;</a>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#" target="_blank">Узнать &rarr;</a>
       </p>
 
       <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка">
@@ -117,7 +117,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="" class="feynman__link" target="blank">Подробнее &rarr;</a>
+        <a href="" class="feynman__link" target="_blank">Подробнее &rarr;</a>
         <img class="feynman__img" src="./images/feynman.png" alt="Фотография Фейнмана">
       </section>
 
@@ -186,7 +186,7 @@
 
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Книга Весь мир — школа">
-            <a class="khan__buy-link" href="" target="blank">Купить книгу &rarr;</a>
+            <a class="khan__buy-link" href="" target="_blank">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
@@ -262,25 +262,25 @@
 
         <ul class="resources__logo-zone">
           <li class="resources__logo">
-            <a href="#" target="blank">
+            <a href="#" target="_blank">
               <img src="./images/logo/resources-arzamas.svg" alt="Arzamas">
             </a>
           </li>
 
           <li class="resources__logo">
-            <a href="#" target="blank">
+            <a href="#" target="_blank">
               <img src="./images/logo/resources-n1.svg" alt="N + 1">
             </a>
           </li>
 
           <li class="resources__logo">
-            <a href="#" target="blank">
+            <a href="#" target="_blank">
               <img src="./images/logo/resources-strelka.svg" alt="Strelka">
             </a>
           </li>
 
           <li class="resources__logo">
-            <a href="#" target="blank">
+            <a href="#" target="_blank">
               <img src="./images/logo/resources-polka.svg" alt="Полка">
             </a>
           </li>
@@ -295,7 +295,7 @@
       <div class="footer__columns">
 
         <div class="footer__column footer__column_content_copyright">
-          <a class="logo logo_place_footer" href="#" target="blank"></a>
+          <a class="logo logo_place_footer" href="#" target="_blank"></a>
 
           <p class="footer__author">&copy; 2021. Данил Мелентьев</p>
         </div>
@@ -304,11 +304,11 @@
           <h2 class="footer__column-heading">О Практикуме</h2>
 
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#" target="blank">Главная</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank">Главная</a></li>
 
-            <li><a class="footer__column-link" href="#" target="blank">Концепция</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank">Концепция</a></li>
 
-            <li><a class="footer__column-link" href="#" target="blank">Наставники</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank">Наставники</a></li>
           </ul>
         </nav>
 
@@ -316,17 +316,17 @@
           <h2 class="footer__column-heading">Соцсети</h2>
 
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#" target="blank">
+            <li><a class="footer__column-link" href="#" target="_blank">
               <img class="footer__social-icon" src="./images/socials/facebook_color_white.svg" alt="Иконка Facebook">
               Facebook
             </a></li>
 
-            <li><a class="footer__column-link" href="#" target="blank">
+            <li><a class="footer__column-link" href="#" target="_blank">
               <img class="footer__social-icon" src="./images/socials/vk_color_white.svg" alt="Иконка ВКонтакте">
               ВКонтакте
             </a></li>
 
-            <li><a class="footer__column-link" href="#" target="blank">
+            <li><a class="footer__column-link" href="#" target="_blank">
               <img class="footer__social-icon" src="./images/socials/instagram_color_white.svg" alt="Иконка Instagram">
               Instagram
             </a></li>
